fixed word overflow issue

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -6,6 +6,7 @@
 body {
   font-family: "Courier New", Courier, monospace;
   overflow-x: hidden;
+  word-wrap:break-word;
 }
 ul,
 p {
